--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     		<head>
-			<link rel="shortcut icon" href="http://image.lzhaofu.cn/MPic/favicon.ico">
+			<link rel="shortcut icon" href="http://image.lzhaofu.cn/favicon.ico">
     			<meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
     			<meta content="乔布堂 cv.qiaobutang.com" name="keywords"/>
     			<title>应聘.NET软件工程师岗位_罗朝福_182-0036-9031</title>
